fix pet swagger docs
