# docs/swagger.json
@@ -68,7 +68,7 @@
         },
         "/item/{uuid}": {
             "get": {
-                "description": "returns the pet by its uuid",
+                "description": "returns the item by its uuid",
                 "consumes": [
                     "application/json"
                 ],
@@ -76,7 +76,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "pets"
+                    "items"
                 ],
                 "summary": "ItemByUUID",
                 "parameters": [
@@ -92,7 +92,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/mongo.Pet"
+                            "$ref": "#/definitions/mongo.Item"
                         }
                     }
                 }
@@ -125,6 +125,38 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/internal_api.ItemResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/pet/{uuid}": {
+            "get": {
+                "description": "returns the pet by its uuid",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "pets"
+                ],
+                "summary": "ItemByUUID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "id",
+                        "name": "uuid",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/mongo.Pet"
                         }
                     }
                 }
